--- a/Assignment2/package.json
+++ b/Assignment2/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "pg": "^8.16.3",
+    "sql.js": "^1.13.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
