--- a/Assignment4/package.json
+++ b/Assignment4/package.json
@@ -14,7 +14,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "squel": "^5.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
